--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <title>主页</title> 
 </head> 
 <body> 
-    <a href="WordToNumber/WordToNumber.html">字母转数字</a><br>
+    <a href="WordToNumber.html">字母转数字</a><br>
+    <a href="Vibrator.html">震动器</a><br>
     <a href="https://skhylsupztcw.ap-southeast-1.clawcloudrun.com/">SillyTavern</a> 
 </body> 
 </html>
