更新 Vibrator.html
解决输入框边距问题

--- a/Vibrator.html
+++ b/Vibrator.html
@@ -23,6 +23,11 @@
             border: 1px solid #ddd;
             border-radius: 8px;
         }
+        
+        .input-group {
+            padding: 0 15px; /* 新增：左右对称留白 */
+            box-sizing: border-box; /* 确保宽度计算包含padding */
+        }
 
         label {
             display: block;
